# ooerbot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  app.json  config.example.py  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.in  requirements.txt  run.py
.github/workflows/: codeql.yaml  lint.yaml
ooerbot/: bot.py  settings.py
ooerbot/api/: client.py  models.py
ooerbot/apis/: reactions.py  reactions.yml
ooerbot/cogs/: reaction_admin.py  reactions.py  utilities.py
ooerbot/models/: reaction.py
ooerbot/utils/: checks.py  converters.py  replacer.py
